# multAIplayer

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .release-please-manifest.json  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  eslint.config.mjs  package-lock.json  package.json  railway.json  release-please-config.json  tsconfig.base.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  codeql-config.yml  crypto-vector-dependency.json  dependabot.yml  pull_request_template.md  rust-advisory-policy.json
apps/cli/: Cargo.toml  README.md  RELEASE.md  install.sh
apps/cli/crates/protocol/: Cargo.toml
apps/cli/crates/protocol/src/: events.rs  lib.rs  records.rs  relay.rs  validation.rs
apps/cli/crates/protocol/tests/: golden.rs  properties.rs
apps/cli/release/: INSTALL.md  cli.entitlements.plist  package-cli.mjs  release-config.json  release-lib.mjs  release-policy.test.mjs  verify-package.mjs
apps/cli/src/: auth.rs  chat.rs  codex.rs  handoff.rs  identity.rs  invite.rs  lib.rs  main.rs  mls.rs  platform.rs  relay.rs  room.rs
apps/cli/tests/: codex_host_boundary.rs  cross_client_matrix.rs  invite-code-parity.ts  real-relay-fixture.ts  room-create-restart.test.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.native-e2e.conf.json  tauri.prebuilt.conf.json  tauri.release.conf.json  updater-public.key
apps/desktop/src-tauri/.cargo/: mutants.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/codex-activity-projection/: Cargo.toml
apps/desktop/src-tauri/crates/codex-activity-projection/src/: host.rs  lib.rs
apps/desktop/src-tauri/crates/mls-core/: Cargo.toml
apps/desktop/src-tauri/crates/mls-core/fuzz/: Cargo.toml
apps/desktop/src-tauri/crates/mls-core/fuzz/corpus/codex_app_server_projection/: command-completed.json
apps/desktop/src-tauri/crates/mls-core/fuzz/corpus/key_package_deserialization/: invalid-key-package-upload.json  valid-credential.json
apps/desktop/src-tauri/crates/mls-core/fuzz/fuzz_targets/: codex_app_server_projection.rs  key_package_deserialization.rs
apps/desktop/src-tauri/crates/mls-core/src/: device_auth.rs  engine.rs  host_rules.rs  hpke_seal.rs  invite_capability.rs  lib.rs  policy.rs  storage.rs  validator.rs
apps/desktop/src-tauri/crates/mls-core/src/engine/: error.rs  exporter.rs  group_lifecycle.rs  group_queries.rs  host_transfer.rs  invite_admission.rs  membership.rs  messaging.rs  outbound.rs  outbox_lifecycle.rs  tests.rs  types.rs  validation.rs
apps/desktop/src-tauri/crates/mls-core/src/storage/: atomic_group.rs  delivery_receipts.rs  encrypted_store.rs  history_ciphertext.rs  invite_receipts.rs  outbox.rs  pending_invites.rs  retained_material.rs
apps/desktop/src-tauri/crates/mls-core/tests/: mls_lifecycle.rs  security_state_machine.rs
apps/desktop/src-tauri/crates/typed-tauri-command/: Cargo.toml
apps/desktop/src-tauri/crates/typed-tauri-command/src/: lib.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: atomic_file.rs  browser.rs  browser_guard.js  codex.rs  codex_account.rs  codex_activity.rs  codex_authorization.rs  codex_catalog.rs  codex_goal.rs  codex_request_projection.rs  codex_request_validation.rs  codex_requests.rs  codex_rpc.rs  codex_steering.rs  codex_threads.rs  codex_turn_lifecycle.rs  command_error.rs  command_safety.rs  credential_store.rs  diagnostics.rs  git.rs  github.rs  host_sandbox.rs  invite_link.rs  keychain.rs  lib.rs  lib_tests.rs  local_preview.rs  main.rs  mls_native.rs  output.rs  process.rs  project.rs  registered_commands.rs  room_archive.rs  shell.rs  shell_authorization.rs  terminal.rs  trusted_auth.rs  updater_auth.rs  (+3 more)
apps/desktop/src-tauri/src/codex/: session.rs
apps/desktop/src-tauri/src/codex_account/: compatibility.rs  tests.rs
apps/desktop/src-tauri/src/diagnostics/: redaction.rs  tests.rs
apps/desktop/src-tauri/src/github/: auth.rs  tests.rs
apps/desktop/src-tauri/src/mls_native/: crypto_commands.rs  group_commands.rs  history_commands.rs  identity_commands.rs  invites.rs  store_support.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/room_archive/: codec.rs  library.rs
apps/desktop/src-tauri/src/shell_authorization/: tests.rs
apps/desktop/src-tauri/test-fixtures/: updater-metadata-payload.json  updater-metadata-payload.json.sig
docs/: README.md  accessibility-and-localization.md  agent-workflow.md  alpha-limitations.md  alpha-release-readiness.md  architecture-walkthrough.md  ci-policy.md  codex-hosting.md  compatibility-inventory.md  cryptography.md  dependency-security.md  engineering-practices.md  external-review-packet.md  faq.md  hosted-infrastructure.md  if-unmaintained.md  initial-alpha-release-notes.md  local-preview-sharing.md  message-lifecycles.md  next-alpha-release-notes.md  official-relay-deployment-checklist.md  product-architecture.md  protocol.md  public-alpha-maintainer-guide.md  relay-migration-runbook.md  relay-operations.md  release-assets.v1.json  release-hardening.md  release-operations.md  reproducible-builds.md  room-archives.md  rust-panic-policy.md  security-journey.md  self-hosting.md  tauri-ipc-boundary-audit.md  tauri-ipc-boundary.md  threat-model-changelog.md  threat-model.md  using-the-app.md
e2e/: README.md  capture-readme-screens.mjs  codex-chat-parity.spec.ts  codex-turn-approval.spec.ts  desktop-security-journeys.spec.ts  helpers.ts  host-handoff.spec.ts  invite-join.spec.ts  monaco-language-services.spec.ts  onboarding.spec.ts  playwright.config.ts  raw-reasoning-setting.spec.ts  room-lifecycle.spec.ts  web-shell.spec.ts
releases/: latest.json
scripts/: assert-security-journey-executed.mjs  assert-security-journey-executed.test.mjs  benchmark-mls-validator.mjs  capture-readme-screens.mjs  cargo-license-notices-check.mjs  check-crypto-vector-dependency.mjs  check-crypto-vector-dependency.test.mjs  check-latest-codex-contract.mjs  (+54 more)
(+1075 files in other folders)
