[package]
name = "multaiplayer-cli"
version = "0.1.0"
description = "Terminal client for multAIplayer."
authors = ["Maddie D. Reese"]
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "multAIplayer"
path = "src/main.rs"

[workspace]
members = ["crates/protocol"]
resolver = "2"
