[package]
name = "multaiplayer-cli"
version = "0.1.0"
description = "Terminal client for multAIplayer."
authors = ["Maddie D. Reese"]
edition = "2021"
license = "Apache-2.0"
publish = false

[[bin]]
name = "multAIplayer"
path = "src/main.rs"

[workspace]
members = ["crates/protocol"]
resolver = "2"

[dependencies]
base64 = "=0.22.1"
keyring = "=4.1.5"
mls-core = { path = "../desktop/src-tauri/crates/mls-core" }
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
uuid = { version = "=1.24.0", features = ["v4"] }
zeroize = "=1.9.0"
