[package]
name = "multaiplayer"
version = "0.1.0-alpha.0"
description = "Private group chat for coding with Codex."
authors = ["Maddie Dreese"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "multaiplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
keyring = "=4.1.4"
libc = "=0.2.186"
portable-pty = "=0.9.0"
regex = "=1.13.0"
tauri = { version = "=2.11.5", features = ["unstable"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-shell = "=2.3.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
uuid = { version = "=1.23.4", features = ["v4"] }
