[package]
name = "multaiplayer"
version = "0.1.0-alpha.0"
description = "Private group chat for coding with Codex."
authors = ["Maddie Dreese"]
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["crates/mls-core"]
resolver = "2"

[lib]
name = "multaiplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
native-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = "=0.22.1"
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
keyring = "=4.1.4"
libc = "=0.2.186"
portable-pty = "=0.9.0"
regex = "=1.13.0"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = ["unstable"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-wdio = { version = "=1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "=1.2.0", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
uuid = { version = "=1.23.5", features = ["v4"] }
mls-core = { path = "crates/mls-core" }

[dev-dependencies]
proptest = "=1.11.0"
tempfile = "=3.24.0"
