[package]
name = "multaiplayer"
version = "0.1.0-alpha.16"
description = "Private group chat for coding with Codex."
authors = ["Maddie D. Reese"]
default-run = "multaiplayer"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["crates/codex-activity-projection", "crates/mls-core", "crates/typed-tauri-command"]
resolver = "2"

[lib]
name = "multaiplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
native-e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
age = { version = "=0.12.1", default-features = false }
base64 = "=0.22.1"
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
codex-activity-projection = { path = "crates/codex-activity-projection" }
libc = "=0.2.186"
minisign-verify = "=0.2.5"
mls-core = { path = "crates/mls-core" }
portable-pty = "=0.9.0"
regex = "=1.13.1"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
semver = "=1.0.28"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = ["unstable"] }
typed-tauri-command = { path = "crates/typed-tauri-command" }
tauri-plugin-dialog = "=2.7.2"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-process = "=2.3.1"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-wdio = { version = "=1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "=1.2.0", optional = true }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
uuid = { version = "=1.24.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "=1.0.1", features = ["keychain", "protected"] }
keyring-core = "=1.0.0"
security-framework = "=3.7.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = "=4.1.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
proptest = "=1.11.0"
tauri = { version = "=2.11.5", features = ["test", "unstable"] }
tempfile = "=3.27.0"
