[package]
name = "multaiplayer-protocol"
version = "0.1.0"
description = "Strict Rust representations of the multAIplayer wire protocol."
authors = ["Maddie D. Reese"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
proptest = "1.11.0"
