[package]
name = "codex-activity-projection"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Bounded projection of untrusted Codex app-server activity"

[lib]
path = "../../src/codex_activity.rs"

[dependencies]
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
