[package]
name = "mls-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Native MLS and device-directed cryptography for multAIplayer"

[features]
test-fixtures = []

[[bin]]
name = "mls-lifecycle-fixture"
path = "src/bin/mls-lifecycle-fixture.rs"
required-features = ["test-fixtures"]

[[bin]]
name = "mls-integration-client"
path = "src/bin/mls-integration-client.rs"
required-features = ["test-fixtures"]

[dependencies]
base64 = "=0.22.1"
aes-gcm = "=0.10.3"
hpke = { version = "=0.14.0", default-features = false, features = ["alloc", "getrandom", "aes", "nistp"] }
hmac = "=0.13.0"
mls-rs = { version = "=0.54.0", default-features = false, features = ["std", "private_message", "prior_epoch", "custom_proposal", "fast_serialize", "external_client", "sqlcipher-bundled"] }
mls-rs-crypto-awslc = { version = "=0.23.0", default-features = true }
mls-rs-provider-sqlite = { version = "=0.22.0", default-features = false, features = ["sqlcipher-bundled"] }
mls-rs-core = "=0.26.0"
maybe-async = "=0.2.11"
rand = "=0.9.3"
rusqlite = "=0.37.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
zeroize = { version = "=1.9.0", features = ["derive"] }

[dev-dependencies]
proptest = "=1.11.0"
rand_core = "=0.10.1"
tempfile = "=3.27.0"
